--- a/UWP/MainPage.xaml
+++ b/UWP/MainPage.xaml
@@ -7,60 +7,60 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    Height = "447" Width = "580">
+    Height = "447" Width = "435">
 
-    <Grid>
+    <Grid HorizontalAlignment="Center" Width="434">
 
         <Button x:Name="TakeoffButton" Click="AutoTakeoff" Height="40"
-                Width="120" Content="Auto Takeoff" Margin="31,35,0,0"
-                VerticalAlignment="Top" RenderTransformOrigin="0.483,0.4" />
-
-        <Button x:Name="InitMissionButton" Click="InitMission" Height="40"
-                Width="120" Content="Init Mission" Margin="40,255,0,0"
+                Width="120" Content="Auto Takeoff" Margin="28,40,0,0"
                 VerticalAlignment="Top" RenderTransformOrigin="0.483,0.4" />
 
         <Button x:Name="uploadmissionbutton" Click="UploadMission" Height="40"
-                Width="120" Content="Upload Mission" Margin="165,255,0,0"
+                Width="117" Content="Upload Mission" Margin="31,245,0,0"
                 VerticalAlignment="Top" />
 
         <Button x:Name="startmissionbutton" Click="ExecuteMission" Height="40"
-                Width="120" Content="Start Mission" Margin="290,255,0,0"
+                Width="120" Content="Start Mission" Margin="153,245,0,0"
                 VerticalAlignment="Top" />
 
         <Button x:Name="stopmissionbutton" Click="StopMission" Height="40"
-                Width="120" Content="Stop Mission" Margin="415,255,0,0"
+                Width="112" Content="Stop Mission" Margin="278,245,0,0"
                 VerticalAlignment="Top" RenderTransformOrigin="1.55,3.025" />
 
         <Button x:Name="getstatebutton" Click="GetState" Height="40"
-                Width="120" Content="Get State" Margin="156,35,0,0"
+                Width="120" Content="Get State" Margin="153,40,0,0"
                 VerticalAlignment="Top" />
 
         <Button x:Name="setantennalocation" Click="setAntennaLocation" Height="40"
-                Width="159" Content="Set Antenna location" Margin="32,141,0,0"
+                Width="159" Content="Set Antenna location" Margin="28,118,0,0"
                 VerticalAlignment="Top" RenderTransformOrigin="1.55,3.025" />
 
         <Button x:Name="setantennaheight" Click="setAntennaElevation" Height="40"
-                Width="165" Content="Set Antenna Elevation" Margin="191,141,0,0"
+                Width="165" Content="Set Antenna Elevation" Margin="192,118,0,0"
                 VerticalAlignment="Top" />
 
         <Button x:Name="makeAzimuthMission" Click="generateAzimuthMission" Height="40"
-            Width="177" Content="Make Azimuth Mission" Margin="108,300,0,0"
+            Width="177" Content="Make Azimuth Mission" Margin="31,200,0,0"
             VerticalAlignment="Top" RenderTransformOrigin="1.55,3.025" />
 
         <Button x:Name="makeElevationMission" Click="generateElevationMission" Height="40"
-            Width="177" Content="Make Elevation Mission" Margin="290,300,0,0"
+            Width="177" Content="Make Elevation Mission" Margin="213,200,0,0"
             VerticalAlignment="Top" RenderTransformOrigin="1.55,3.025" />
 
         <Button x:Name="startLoggingAzimuthButton" Click="startLogging" Height="40"
-            Width="165" Content="Start Logging Azimuth" Margin="40,387,0,0"
+            Width="165" Content="Start Logging Azimuth" Margin="31,324,0,0"
             VerticalAlignment="Top" />
 
         <Button x:Name="stopLoggingButton" Click="stopLogging" Height="40"
-            Width="165" Content="Stop Logging" Margin="379,387,0,0"
+            Width="165" Content="Stop Logging" Margin="31,369,0,0"
             VerticalAlignment="Top" />
 
         <Button x:Name="startLoggingElevationButton" Click="startLoggingElevation" Height="40"
-            Width="165" Content="Start Logging Elevation" Margin="210,387,0,0"
+            Width="165" Content="Start Logging Elevation" Margin="201,324,0,0"
+            VerticalAlignment="Top" />
+        
+        <Button x:Name="startLoggingElevationButton_Copy" Click="getLocation" Height="40"
+            Width="165" Content="get Location" Margin="225,384,0,0"
             VerticalAlignment="Top" />
 
         <!--<Button x:Name="testlatButton" Click="testlat" Height="40"
